@@ -3342,7 +3342,8 @@ sub import_bundle
             next if check_md5( $song_ref->{md5} );
             if ( !-r catfile( $config{filepath}, $song_ref->{filename} ) )
             {
-                print "Moving $song_ref->{filename} to $config{filepath}\n";
+                print "Moving $song_ref->{filename} to $config{filepath}\n"
+                  if $debug;
                 copy( $song_ref->{filename},
                     catfile( $config{filepath}, $song_ref->{filename} ) )
                   or die "Couldn't copy $song_ref->{filename}";
@@ -3408,6 +3409,19 @@ sub export_tank_bundle
     $zip->addString( $xml, "mrvoice.xml" );
 
     my $outfile = catfile( get_homedir(), "bundle-$timestring.zip" );
+
+    if ( -r $outfile )
+    {
+        my $subletter = "a";
+        while (
+            -r catfile( get_homedir(), "bundle-${timestring}${subletter}.zip" )
+          )
+        {
+            $subletter++;
+        }
+        $outfile =
+          catfile( get_homedir(), "bundle-${timestring}${subletter}.zip" );
+    }
 
     $zip->writeToFileNamed($outfile);
     chdir($olddir);
@@ -3813,6 +3827,8 @@ sub get_info_from_id
     $info{title}    = $result_hashref->{title};
     $info{artist}   = $result_hashref->{artist};
     $info{category} = $result_hashref->{category};
+    $info{md5}      = $result_hashref->{md5};
+    $info{time}     = $result_hashref->{time};
     if ( $info{artist} )
     {
         $info{fulltitle} = "\"$info{title}\" by $info{artist}";
